--- a/src/app/frontend/chrome/userpanel/template.html
+++ b/src/app/frontend/chrome/userpanel/template.html
@@ -41,7 +41,7 @@ limitations under the License.
           i18n>Sign out
   </button>
   <button mat-menu-item
-          (click)="logout()"
+          (click)="logoutCustom()"
           i18n>Logout
   </button>
 </mat-menu>
