--- a/src/app/frontend/chrome/userpanel/template.html
+++ b/src/app/frontend/chrome/userpanel/template.html
@@ -19,7 +19,7 @@ limitations under the License.
     <ng-container *ngIf="isLoginStatusInitialized">
       <ng-container [ngSwitch]="true">
         <ng-container *ngSwitchCase="loginStatus.headerPresent && !loginStatus.impersonationPresent"
-                      i18n>Logged in with auth header (patched) <a href="https://auth.p-poc.k.garaza.io/oauth2/sign_out">LO</a></ng-container>
+                      i18n>Logged in with auth header (patched) <a href="https://auth.ia.k.garaza.io/oauth2/sign_out">LO</a></ng-container>
         <ng-container *ngSwitchCase="loginStatus.tokenPresent"
                       i18n>Logged in with token</ng-container>
         <ng-container *ngSwitchCase="loginStatus.headerPresent && loginStatus.impersonationPresent">{{loginStatus.impersonatedUser}}</ng-container>
