--- a/src/app/frontend/chrome/userpanel/template.html
+++ b/src/app/frontend/chrome/userpanel/template.html
@@ -19,7 +19,7 @@ limitations under the License.
     <ng-container *ngIf="isLoginStatusInitialized">
       <ng-container [ngSwitch]="true">
         <ng-container *ngSwitchCase="loginStatus.headerPresent && !loginStatus.impersonationPresent"
-                      i18n>Logged in with auth header (patched) <a href="https://auth.ia.k.garaza.io/oauth2/sign_out">LO</a></ng-container>
+                      i18n>Logged in with auth header<br><a href="https://keycloak.ia.k.garaza.io/auth/realms/ppoc/protocol/openid-connect/logout?redirect_uri=https%3A%2F%2Fauth.ia.k.garaza.io%2Foauth2%2Fsign_in">Logout</a></ng-container>
         <ng-container *ngSwitchCase="loginStatus.tokenPresent"
                       i18n>Logged in with token</ng-container>
         <ng-container *ngSwitchCase="loginStatus.headerPresent && loginStatus.impersonationPresent">{{loginStatus.impersonatedUser}}</ng-container>
@@ -41,7 +41,8 @@ limitations under the License.
           i18n>Sign out
   </button>
   <button mat-menu-item
-          (click)="logoutCustom()"
+          *ngIf="isLoggedInWithAuthHeader()"
+          (click)="logoutWithAuthHeader()"
           i18n>Logout
   </button>
 </mat-menu>
